feat: clean up